force-app/main/default/objects/Piano_Api_Setting__mdt/Piano_Api_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Piano Api Setting</label>
    <pluralLabel>Piano Api Settings</pluralLabel>
</CustomObject>