force-app/main/default/objects/Piano_Api_Setting__mdt/fields/Base_URI__c.field-meta.xml
<CustomField>
        <fullName>Base_URI__c</fullName>
        <label>Base URI</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>