force-app/main/default/objects/Piano_Api_Setting__mdt/fields/Term_Id__c.field-meta.xml
<CustomField>
        <fullName>Term_Id__c</fullName>
        <label>Term Id</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>