force-app/main/default/objects/Piano_Api_Setting__mdt/fields/Term_Name__c.field-meta.xml
<CustomField>
        <fullName>Term_Name__c</fullName>
        <label>Term Name</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>