force-app/main/default/objects/Piano_Api_Setting__mdt/fields/Token__c.field-meta.xml
<CustomField>
        <fullName>Token__c</fullName>
        <label>Api Token</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>