force-app/main/default/objects/Piano_Api_Setting__mdt/listViews/all_w_detail.listView-meta.xml
<ListView>
        <fullName>all_w_detail</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>Base_URI__c</columns>
        <columns>Term_Id__c</columns>
        <columns>Term_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>all w/ detail</label>
    </ListView>